                      sagetv-for-plexmediacenter
                              ChangeLog


2015-04-06  Raymond Chi <raychi@gmail.com>

  * general code cleanup on all files
      - fixed tab/space usage on all files so it looks correct
        everywhere (browser, notepad, etc)
      - standarized on indent size 4 for all source files.
      - removed nested/multi-level if statements when possible so the
        code blocks are not indented all the way to the right. ie,
        instead of multi-level "if cond1 then if cond2 .." style where
        the main code block is heavily indented to the right, used "if
        not cond1 then continue (loop)" style so subsequent test for
        cond2 and beyond have the same indent level. This makes the
        code much easier to read/follow/debug.
      - wrapped long comment/code lines (emacs justify option)

  * fully documented all source files
      - added comments to each source file regarding what the file is
        for, and useful links for additional info/background.
      - used javadoc style comments for javascript files.
      - used python docstring for in python files.
      - the source code should be significantly easier to follow for
        new contributors.
  
  * sagex\services\plex.js code cleanup/fix:
      - fixed loop: continue -> break
      - stop outer loop when mediaFile has a value. The previous code
        would continue to run the loop even if we found a match.
      - fixed bug where occasionally getAbsolutePath() gets called on
        an undefined object

  * allow user to configure scanner/agent via a sageplex_cfg.json file
      - code will try to find the configuration file in plex data
        directory. user can override this with an environment variable.
      - removed all hard coded configuration settings from various
        source files.

  * created a common/sageplex module to hold common code that are used
    by both scanner and agent.